--- a/app/views/room_diagram/quick_reserve_room.html.erb
+++ b/app/views/room_diagram/quick_reserve_room.html.erb
@@ -1,4 +1,15 @@
 <%= form_with url: "/reservations", method: :post  do |form| %>
+  <% if @reservation.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this room from being saved:</h2>
+
+      <ul>
+        <% @reservation.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
   <div class="row">
     <div class="col-lg-6 row">
       <div class="row end-row-md">
@@ -151,7 +162,6 @@
           </div>
           </div>
           <%= form.fields_for :client_attributes, Client.new do |customer| %>
-            <%= customer.hidden_field(:client_id, :value => 1) %>
             <%= customer.hidden_field(:name, :value => Client.find(1).name) %>
             <%= customer.hidden_field(:citizen_id, :value => Client.find(1).citizen_id) %>
           <% end %>
