--- a/app/views/room_diagram/quick_reserve_room.html.erb
+++ b/app/views/room_diagram/quick_reserve_room.html.erb
@@ -1,214 +1,1 @@
-<%= form_with url: "/reservations", method: :post  do |form| %>
-  <% if @reservation.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@reservation.errors.count, "error") %> prohibited this room from being saved:</h2>
-
-      <ul>
-        <% @reservation.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Tên khách</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field :client_name, class:"form-control", placeholder: "Nguyễn Văn A" %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row row">
-        <p class="col-lg-3">CCCD</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field   :client_citizen_id, class:"form-control", placeholder: "0123456789" %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Loại phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_type_name, class:"form-control", readonly:true, id:"room_type"  %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row">
-        <p class="col-lg-3">Phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_name, class:"form-control", readonly:true, id:"room_name" %>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Loại giá</p>
-        <div class="col-lg-7 form-group">
-          <select id="price_type" onchange="window.location = this.value;" class="form-select read-only-white">
-            <% @reservation_type.each do |c| %>
-              <% index = @reservation_type.index(c) + 1%>
-              <option value=/room_diagram/quick_reserve_room?room_id=<%= @room_id %>&price_type_id=<%= index %>>
-                <%= c[:text] %>
-              </option>
-            <% end %>
-          </select>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row">
-        <p class="col-lg-3">Giá phòng</p>
-        <div class="col-lg-7 form-group">
-          <%= form.label @room_price, class:"form-control", readonly:true, id:"room_price" %>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-
-    <div class="col-lg-6 row">
-      <div class="row end-row-md">
-        <p class="col-lg-3">Ngày đến</p>
-        <div class="col-lg-7 form-group">
-          <%= form.text_field :arrival_date,
-                              data: {
-                                controller: "flatpickr",
-                                flatpickr_date_format: "d-m-Y",
-                                flatpickr_min_date: Time.zone.now
-                              },
-                              class: "form-select read-only-white",
-                              placeholder: "Chọn ngày đến"%>
-          <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-6 row">
-      <div class="row">
-        <p class="col-lg-3">Đặt cọc</p>
-        <div class="col-lg-7 form-group">
-          <%= form.fields_for :payment_attributes, Payment.new do |p| %>
-            <%= p.hidden_field(:reservation_date, :value => Date.today)  %>
-            <%= p.hidden_field(:is_paid, :value => false)  %>
-            <%= p.number_field :deposit, min: 0, class:"form-control"%>
-            </div>
-            </div>
-            </div>
-            </div>
-            <div class="row">
-              <div class="col-lg-6 row">
-                <div class="row end-row-md">
-                  <p class="col-lg-3">Ngày đi</p>
-                  <div class="col-lg-7 form-group">
-                    <%= form.text_field :leave_date,
-                                        data: {
-                                          controller: "flatpickr",
-                                          flatpickr_date_format: "d-m-Y",
-                                          flatpickr_min_date: Time.zone.now
-                                        },
-                                        class: "form-select read-only-white",
-                                        placeholder: "Chọn ngày đi"%>
-                    <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 row">
-                <div class="row">
-                  <p class="col-lg-3">Người lớn</p>
-                  <div class="col-lg-7 row" style="padding-right: 0; margin-right: 0">
-                    <div class="col-lg-4  form-group"  style="padding-right: 0; margin-right: 0">
-                      <%= form.number_field :adults, in: 0 .. 20, class:"form-control" %>
-                    </div>
-                    <p class="col-lg-4 padding-left">Trẻ em</p>
-                    <div class="col-lg-4 form-group"  style="padding-right: 0; margin-right: 0">
-                      <%= form.number_field :children, in: 0 .. 20 ,class:"form-control " %>
-                    </div>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-            <div class="row">
-
-
-              <div class="col-lg-6 row">
-                <div class="row end-row-md">
-                  <p class="col-lg-3">Hình thức TT</p>
-                  <div class="col-lg-7 form-group">
-                    <%= p.select :payment_type, options_for_select(@payment_type_view), {}, class: "form-select read-only-white" %>
-                    <!--            <small id="emailHelp" class="form-text text-muted">Email helpers</small>-->
-
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 row">
-                <div class="row">
-                  <p class="col-lg-3">Tổng tiền</p>
-                  <div class="col-lg-7 form-group">
-                    <%= p.number_field :temp_total, min: 0, class:"form-control"%>
-          <% end %>
-          </div>
-          </div>
-          </div>
-          </div>
-          <%= form.fields_for :client_attributes, Client.new do |customer| %>
-            <%= customer.hidden_field(:name, :value => Client.find(1).name) %>
-            <%= customer.hidden_field(:citizen_id, :value => Client.find(1).citizen_id) %>
-          <% end %>
-          <%= form.hidden_field(:check_in_date, :value => Date.today) %>
-          <%= form.hidden_field(:employee_id, :value => current_user.employee_id) %>
-          <%= form.hidden_field(:room_id, :value => params[:room_id]) %>
-          <%= form.hidden_field(:status, :value => 2) %>
-          <br>
-          <div class="d-flex actions justify-content-end">
-            <%= form.submit "Save changes", class: "btn btn-primary add_reservation", data: { disable_with: false } %>
-            <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation) %>
-            <%#= link_to 'Create', room_diagram_quick_reserve_room_path(@reservation, arrival_date: @reservation.arrival_date, leave_date: @reservation.leave_date, client_name: @reservation.client_name, client_citizen_id: @reservation.client_citizen_id, children: @reservation.children, adults: @reservation.adults, client_id: @reservation.client_id, employee_id: @reservation.employee_id, room_id: @reservation.room_id, payment_id: @reservation.payment_id), method: :post	 %>
-            <span style="width:10px"></span>
-            <%= link_to 'Cancel', room_diagram_path, data: { dismiss: "modal", confirm:
-              'Are you sure?' }, :remote => true, :class => 'btn btn-secondary delete_reservation' %>
-          </div>
-
-
-          <script type="text/javascript">
-              $(document).ready(function(){
-                  $('#quickResModal').on('hidden.bs.modal', function () {
-                      $('#quickResModal').remove()
-                  })
-                  $('#total').keyup(function(){
-                      $('#temp-total').val($('#total').val());
-                  })
-
-                  <% if session[:reservation_params] %>
-                  <% params = session[:reservation_params] %>
-                  $('#arrival_date').val("<%= params["arrival_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-                  $('#leave_date').val("<%= params["leave_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-                  $('#adults').val("<%= params["adults"] || 0 %>")
-                  $('#children').val("<%= params["children"] || 0 %>")
-                  <% if params["payment_attributes"] %>
-                  <% payment = params["payment_attributes"] %>
-                  $('#_payment_attributes_deposit').val("<%= payment["deposit"] || 0 %>")
-                  $('#_payment_attributes_payment_type').val("<%= payment["payment_type"] || 1 %>")
-                  $('#_payment_attributes_temp_total').val("<%=payment["temp_total"] || 0 %>")
-                  <% end %>
-                  <% end %>
-              })
-              var price_type_id = window.location.search
-              const urlParams = new URLSearchParams(price_type_id);
-              var price_type_id = urlParams.get('price_type_id')
-              price_type_id = price_type_id ? price_type_id : 2;
-              price_type_id -= 1;
-              var string = 'select#price_type>option:eq(' + price_type_id + ')'
-              $(string).attr('selected', true);
-          </script>
-<% end %>
+<%= render 'room_diagram/quick_reserve_room' %>
