--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -138,8 +138,6 @@
     </div>
   </div>
   <div class="row">
-
-
     <div class="col-lg-6 row">
       <div class="row end-row-md">
         <p class="col-lg-3">Hình thức TT</p>
@@ -181,30 +179,105 @@
 
 <script type="text/javascript">
     $(document).ready(function(){
-
-        console.log("<%= @room_price_value %>");
-        $('#_payment_attributes_temp_total').val("<%= @room_price_value %>");
-
         $('#quickResModal').on('hidden.bs.modal', function () {
             $('#quickResModal').remove()
         })
-        $('#total').keyup(function(){
-            $('#temp-total').val($('#total').val());
-        })
 
+        var total = updateTotal()
+        $('#_payment_attributes_temp_total').val(total);
+        updateValueBySession()
+    })
+
+    function passAdultsValue(){
+        const queryString = window.location.search;
+        const urlParams = new URLSearchParams(queryString);
+
+        var price_type_id
+        if (urlParams.get('price_type_id'))
+            price_type_id = urlParams.get('price_type_id')
+        else
+            price_type_id = 2
+        const adults = $('#adults').val()
+        const children = $('#children').val()
+        console.log(queryString);
+
+        var theURL = '/room_diagram/quick_reserve_room?room_id=<%= @room_id %>&price_type_id=' + price_type_id +'&adults='+adults+'&children='+children;
+        window.location.href = theURL
+    }
+
+    $('#adults').mouseup(function(e)
+    {
+        var container = $("#adults");
+        // if the target of the click isn't the container nor a descendant of the container
+        if (!container.is(e.target) && container.has(e.target).length === 0)
+        {
+            passAdultsValue()
+        }
+    });
+    $('#adults').focusout(function(){
+        passAdultsValue()
+    })
+    $('#children').mouseup(function(e)
+    {
+        var container = $("#adults");
+
+        // if the target of the click isn't the container nor a descendant of the container
+        if (!container.is(e.target) && container.has(e.target).length === 0)
+        {
+            passAdultsValue()
+        }
+    });
+    $('#children').focusout(function(){
+        passAdultsValue()
+    })
+    function updateTotal()
+    {
+        const queryString = window.location.search;
+        const urlParams = new URLSearchParams(queryString);
+
+        if (urlParams.get('adults'))
+            $('#adults').val(urlParams.get('adults'))
+        else
+            $('#adults').val(0)
+        if (urlParams.get('children'))
+            $('#children').val(urlParams.get('children'))
+        else
+            $('#children').val(0)
+        if (urlParams.get('price_type_id'))
+        {
+            var price_type_id = urlParams.get('price_type_id') - 1
+            var string = 'select#price_type>option:eq(' + price_type_id + ')'
+            $(string).attr('selected', true);
+        }
+        else
+            $('select#price_type>option:eq(1)').attr('selected', true);
+
+        var room_price = (<%= @room_price_value %>);
+        var children = $('#children').val()
+        var children_price = <%=@children_price %>
+
+            children= parseInt(children) *children_price
+
+        var adults = $('#adults').val();
+        var adults_price = <%=@adults_price %>
+            adults = parseInt(adults) * adults_price
+
+        return room_price + children + adults
+    }
+    function updateValueBySession()
+    {
         <% if session[:reservation_params] %>
-        <% params = session[:reservation_params] %>
-        $('#arrival_date').val("<%= params["arrival_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-        $('#leave_date').val("<%= params["leave_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
-        $('#adults').val("<%= params["adults"] || 0 %>")
-        $('#children').val("<%= params["children"] || 0 %>")
+          <% params = session[:reservation_params] %>
+          $('#arrival_date').val("<%= params["arrival_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
+          $('#leave_date').val("<%= params["leave_date"] || (DateTime.now).strftime("%d/%m/%Y") %>")
           <% if params["payment_attributes"] %>
-          <% payment = params["payment_attributes"] %>
-          $('#_payment_attributes_deposit').val("<%= payment["deposit"] || 0 %>")
-          $('#_payment_attributes_payment_type').val("<%= payment["payment_type"] || 1 %>")
+            <% payment = params["payment_attributes"] %>
+            $('#_payment_attributes_deposit').val("<%= payment["deposit"] || 0 %>")
+            $('#_payment_attributes_payment_type').val("<%= payment["payment_type"] || 1 %>")
           <% end %>
         <% end %>
-    })
+    }
+
 </script>
 
 <% end %>
