--- a/app/views/room_diagram/_quick_reserve_room.html.erb
+++ b/app/views/room_diagram/_quick_reserve_room.html.erb
@@ -186,6 +186,7 @@
         var total = updateTotal()
         $('#_payment_attributes_temp_total').val(total);
         updateValueBySession()
+        $('#_payment_attributes_deposit').val(total/2)
     })
 
     function passAdultsValue(){
